更新最后版本，之后应该只会有小的改动
网页基本都可以互相连接，相应文件也改过了，下一步打算和template里面的文件整合一下，应该是最后一次更新这个文件夹，下一次就是static和template

--- a/fornt end design and code/Super○JiJi/about.html
+++ b/fornt end design and code/Super○JiJi/about.html
@@ -1,14 +1,14 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-  <title>Reset Password</title>
+  <title>About</title>
   <meta charset='utf-8'/>
   <link href="css/styles.css" type="text/css" rel="stylesheet"/>
   <link href="css/header.css" type="text/css" rel="stylesheet"/>
-  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link rel="stylesheet" type="text/css" href="css/about.css">
   <script type="text/javascript" src="js/jquery.js"></script>
   <script type="text/javascript" src="js/header.js"></script>
-  <script type="text/javascript" src="js/reset.js"></script>
+  <script type="text/javascript" src="js/about.js"></script>
 </head>
   <body>
   <div id='header'>
@@ -88,37 +88,63 @@
         </div>
   </div>
     
-    <div id="base" class="">
+    <div id="base">
 
-      <img id="Reset_bgd" src="images/video_display/u0.png"/>
-      <p id="Reset_txt" class="h2">Reset password</p>
+      <img id="About_bgd" src="images/video_display/u0.png"/>
+      <p id="About_title" class="h2">About everything</p>
 
-      <p id="reset_npwd_txt" class="h2">New Password:</p>
-      <input id="reset_npwd_input" class="ax_text_field" type="password" value=""/>
-      <p id="reset_npwd_hint" class="paragraph">Password is too short!</p>
+      <p id="About_web_title" class="h2">About this website:</p>
+      <p id="About_web_txt" class="paragraph">A multimedia website, being able to upload, download, play video, audio and view images.</p>
 
-      <p id="reset_rpwd_txt" class="h2">Reenter Password:</p>
-      <input id="reset_rpwd_input" class="ax_text_field" type="password" value=""/>
-      <p id="reset_rpwd_hint" class="paragraph">Different passwords!</p>
+      <p id="About_us_title" class="h2">About us:</p>
+      <div id="About_us_work" class="paragraph">
+        <p>Integration:</p>
+        <p>Website Design:</p>
+        <p>Front-End:</p>
+        <p>Back-End:</p>
+        <p>Interaction:</p>
+        <p>Face recognition(login):</p>
+        <p>Image&amp;Video Processing:</p>
+        <p>Player:</p>
+        <p>Barrage:</p>
+        <p>Web Camera:</p>
+      </div>
+      <div id="About_us_people" class="paragraph">
+          <p>Zikang Xiong</p>
+          <p>Chuyi Hou</p>
+          <p>Chuyi Hou</p>
+          <p>Zikang Xiong</p>
+          <p>Zikang Xiong</p>
+          <p>Zhe Chen, Hanya Zhang, Zhihao Liu</p>
+          <p>Hanya Zhang</p>
+          <p>Ruibo Dingyang</p>
+          <p>Ruibo Dingyang</p>
+          <p>Shuai Yang</p>
+        </div>
+      </div>
 
-      <a id="reset_bt" class="shape" href="index.html">
-        <img id="reset_bt_img" class="img " src="images/edit/u62.png"/>
-        <p id="reset_bt_txt">Change</p>
-      </a>
+      <p id="About_contact_title" class="h2">Contact us:</p>
+      <div id="About_contact_txt" class="paragraph">
+        <p>Feel free to contact us, send emails if you are interested in us or our website.</p>
+        <p>E-mail Address: 619195275@qq.com</p>
+        <p>Github: https://github.com/caffett/aliali_cheers</p>
+        <p>Address: No.4, Section 2, North Jianshe Road, Chengdu, Sichuan, China 610054</p>
+        <p>International Elite Class, School of Information and Software Engineering</p>
+      </div>
     </div>
 
     <div id="blank"></div>
-        <div id = "Footer">
-          <a href="about.html"><p id="Footer_txt_1" class="paragraph">Contact us</p></a>
-          <a href="about.html"><p id="Footer_txt_2" class="paragraph">About this website.</p></a>
-          <a href="about.html"><p id="Footer_txt_3" class="paragraph">About us</p></a>
-          <img id="Footer_logo" src="images/header/logo_footer.png"/>
-          <p id="Footer_txt_4" class="paragraph">Super ○ JIJI 2016 in Chengdu</p>
-          <p id="Footer_txt_5" class="paragraph">@Copyright Team ○Quan.&nbsp; All Rights Reserved</p>
-          <img id="slice_1" class="slice" src="images/header/slice.png"/>
-          <img id="slice_2" class="slice" src="images/header/slice.png"/>
-          <img id="slice_3" class="slice" src="images/header/slice.png"/>
-          <img id="slice_4" class="slice" src="images/header/slice.png"/>
-        </div>
+    <div id = "Footer">
+        <a href="about.html"><p id="Footer_txt_1" class="paragraph">Contact us</p></a>
+        <a href="about.html"><p id="Footer_txt_2" class="paragraph">About this website.</p></a>
+        <a href="about.html"><p id="Footer_txt_3" class="paragraph">About us</p></a>
+        <img id="Footer_logo" src="images/header/logo_footer.png"/>
+        <p id="Footer_txt_4" class="paragraph">Super ○ JIJI 2016 in Chengdu</p>
+        <p id="Footer_txt_5" class="paragraph">@Copyright Team ○Quan.&nbsp; All Rights Reserved</p>
+        <img id="slice_1" class="slice" src="images/header/slice.png"/>
+        <img id="slice_2" class="slice" src="images/header/slice.png"/>
+        <img id="slice_3" class="slice" src="images/header/slice.png"/>
+        <img id="slice_4" class="slice" src="images/header/slice.png"/>
+    </div>
   </body>
 </html>
