--- a/fornt end design and code/Super○JiJi/image.html
+++ b/fornt end design and code/Super○JiJi/image.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="js/image.js"></script>
 </head>
 <body>
-	 <div id='header'>
+  <div id='header'>
         <!-- Logo -->
         <div id='logo'>
           <p id="Logo_title1">Super</p>
@@ -45,7 +45,7 @@
         <div id = 'Search'>
           <a href="#"><p id="Search_login" class="paragraph">Login</p></a>
           <div id = 'User'>
-            <a href="personal_page.html" ><p id="User_name" class="paragraph">Username</p></a>
+            <a href="personal_page.html" ><p id="User_name" class="paragraph">{{ username }}</p></a>
             <p id="User_circle1" class="paragraph">○</p>
             <a href="#"><p id="User_logout" class="paragraph">Logout</p></a>
             <p id="User_circle2" class="paragraph">○</p>
@@ -145,8 +145,12 @@
       <div id = "Image0"  class="image_display">
         <p class="Title">Natural scene</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
-
         <ul id = "display_detail0" class="display">
+          <li id="item0">
+            <img src="images/home/photo_1.jpg">
+            <p>Gates</p>
+            <a href="image_display.html"></a>
+          </li>
         </ul>
       </div>
 
@@ -154,6 +158,11 @@
         <p class="Title">Animal</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
         <ul id="display_detail1" class="display">
+          <li id="item0">
+            <img src="images/home/photo_1.jpg">
+            <p>Gates</p>
+            <a href="image_display.html"></a>
+          </li>
         </ul>
       </div>
 
@@ -161,6 +170,11 @@
         <p class="Title">Sports</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
         <ul id="display_detail2" class="display">
+          <li id="item0">
+            <img src="images/home/photo_1.jpg">
+            <p>Gates</p>
+            <a href="image_display.html"></a>
+          </li>
         </ul>
       </div>
 
@@ -168,6 +182,11 @@
         <p class="Title">Foods</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
         <ul id="display_detail3" class="display">
+          <li id="item0">
+            <img src="images/home/photo_1.jpg">
+            <p>Gates</p>
+            <a href="image_display.html"></a>
+          </li>
         </ul>
       </div>
 
@@ -175,6 +194,11 @@
         <p class="Title">Ideas</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
         <ul id="display_detail4" class="display">
+          <li id="item0">
+            <img src="images/home/photo_1.jpg">
+            <p>Gates</p>
+            <a href="image_display.html"></a>
+          </li>
         </ul>
       </div>
 
@@ -182,6 +206,11 @@
         <p class="Title">Wallpaper</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
         <ul id="display_detail5" class="display">
+          <li id="item0">
+            <img src="images/home/photo_1.jpg">
+            <p>Gates</p>
+            <a href="image_display.html"></a>
+          </li>
         </ul>
       </div>
 
@@ -189,6 +218,11 @@
         <p class="Title">Fashion</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
         <ul id="display_detail6" class="display">
+          <li id="item0">
+            <img src="images/home/photo_1.jpg">
+            <p>Gates</p>
+            <a href="image_display.html"></a>
+          </li>
         </ul>
       </div>
 
@@ -196,14 +230,19 @@
         <p class="Title">Tech&amp;Science</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
         <ul id="display_detail7" class="display">
+          <li id="item0">
+            <img src="images/home/photo_1.jpg">
+            <p>Gates</p>
+            <a href="image_display.html"></a>
+          </li>
         </ul>
       </div>
 
       <!-- Footer -->
       <div id = "Footer">
-        <p id="Footer_txt_1" class="paragraph">Contact us</p>
-        <p id="Footer_txt_2" class="paragraph">About this website.</p>
-        <p id="Footer_txt_3" class="paragraph">Join us</p>
+        <a href="about.html"><p id="Footer_txt_1" class="paragraph">Contact us</p></a>
+        <a href="about.html"><p id="Footer_txt_2" class="paragraph">About this website.</p></a>
+        <a href="about.html"><p id="Footer_txt_3" class="paragraph">About us</p></a>
         <img id="Footer_logo" src="images/header/logo_footer.png"/>
         <p id="Footer_txt_4" class="paragraph">Super ○ JIJI 2016 in Chengdu</p>
         <p id="Footer_txt_5" class="paragraph">@Copyright Team ○Quan.&nbsp; All Rights Reserved</p>
