--- a/fornt end design and code/Super○JiJi/uploaded_audio.html
+++ b/fornt end design and code/Super○JiJi/uploaded_audio.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Audio</title>
+	<title>Uploaded Audio</title>
 	<meta charset='utf-8'/>
   <link href="css/styles.css" type="text/css" rel="stylesheet"/>
   <link href="css/header.css" type="text/css" rel="stylesheet"/>
-  <link rel="stylesheet" type="text/css" href="css/audio.css">
+  <link rel="stylesheet" type="text/css" href="css/uploaded_audio.css">
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/header.js"></script>
-  <script type="text/javascript" src="js/audio.js"></script>
+  <script type="text/javascript" src="js/uploaded_audio.js"></script>
 </head>
 <body>
   <div id='header'>
@@ -87,65 +87,11 @@
           </div>
         </div>
   </div>
-  <!-- Photo -->
-  <div class="Photo_display">
-    <!-- Photo -->
-    <div id='photo'>
-      <ul>
-        <li id='li1'><a href='#'><img src='images/home/photo_1.jpg'/></a></li>
-        <li id='li2'><a href='#'><img src='images/home/photo_2.png'/></a></li>
-        <li id='li3'><a href='#'><img src='images/home/photo_3.jpg'/></a></li>
-        <li id='li4'><a href='#'><img src='images/home/photo_4.jpg'/></a></li>
-      </ul>
-    </div>
-    <!-- next -->
-    <a id="next" href="#">
-      <img class="photo_nav_bgd" src="images/home/next_u123.png"/>
-      <p class="photo_nav_txt">&gt;</p>
-    </a>
 
-    <!-- pre -->
-    <a id="pre" href="#">
-      <img class="photo_nav_bgd" src="images/home/next_u123.png"/>
-      <p class="photo_nav_txt">&lt;</p>
-    </a>
-
-    <!-- mark -->
-    <div id="mark">
-      <ul>
-        <li id="markli4">
-          <a href="#"><img id="marker1" class="mark_item" src="images/home/u130.png"/></a>
-          <a href="#"><img id="marker2" class="mark_item" src="images/home/u130.png"/></a>
-          <a href="#"><img id="marker3" class="mark_item" src="images/home/u130.png"/></a>
-          <a href="#"><img id="marker4" class="mark_item" src="images/home/u128.png"/></a>
-        </li>
-        <li id="markli3">
-          <a href="#"><img id="marker1" class="mark_item" src="images/home/u130.png"/></a>
-          <a href="#"><img id="marker2" class="mark_item" src="images/home/u130.png"/></a>
-          <a href="#"><img id="marker3" class="mark_item" src="images/home/u128.png"/></a>
-          <a href="#"><img id="marker4" class="mark_item" src="images/home/u130.png"/></a>
-        </li>
-        <li id="markli2">
-          <a href="#"><img id="marker1" class="mark_item" src="images/home/u130.png"/></a>
-          <a href="#"><img id="marker2" class="mark_item" src="images/home/u128.png"/></a>
-          <a href="#"><img id="marker3" class="mark_item" src="images/home/u130.png"/></a>
-          <a href="#"><img id="marker4" class="mark_item" src="images/home/u130.png"/></a>
-        </li>
-        <li id="markli1">
-          <a href="#"><img id="marker1" class="mark_item" src="images/home/u128.png"/></a>
-          <a href="#"><img id="marker2" class="mark_item" src="images/home/u130.png"/></a>
-          <a href="#"><img id="marker3" class="mark_item" src="images/home/u130.png"/></a>
-          <a href="#"><img id="marker4" class="mark_item" src="images/home/u130.png"/></a>
-        </li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="display_detail">
-      <div id = "Audio0" class="audio_display">
-        <p class="Title">Music</p>
-        <a class="More" href="#" style="text-decoration:underline;">more</a>
-        <ul id="display_detail0" class="display">
+  <div id="Uploaded" class="audio_display">
+        <p class="Title">Uploaded audio</p>
+        <a class="More" href="personal_page.html" style="text-decoration:underline;">back</a>
+        <ul id = "display_detail" class="display">
           <li>
             <div class="item">
               <img id="item_cover" src="images/audio/image_u61.jpg"/>
@@ -161,133 +107,69 @@
               <p id="item_singer">The chainsmokers Featuring Halsey</p>
             </div>
           </li>
+          <li>
+            <div class="item">
+              <img id="item_cover" src="images/audio/image_u61.jpg"/>
+              <div id="item_change">
+                <img id="item_change_img" src="images/audio/up.png"/>
+              </div>
+              <p id="item_rank">1</p>
+              <img id="play_bg" src="images/audio/play_bg_u82.png"/>
+              <a href="audio_display.html">
+                <img id="play_tri" src="images/audio/play_tri_u84.png"/>
+              </a>
+              <p id="item_title">Closer</p>
+              <p id="item_singer">The chainsmokers Featuring Halsey</p>
+            </div>
+          </li>
+          <li>
+            <div class="item">
+              <img id="item_cover" src="images/audio/image_u61.jpg"/>
+              <div id="item_change">
+                <img id="item_change_img" src="images/audio/up.png"/>
+              </div>
+              <p id="item_rank">1</p>
+              <img id="play_bg" src="images/audio/play_bg_u82.png"/>
+              <a href="audio_display.html">
+                <img id="play_tri" src="images/audio/play_tri_u84.png"/>
+              </a>
+              <p id="item_title">Closer</p>
+              <p id="item_singer">The chainsmokers Featuring Halsey</p>
+            </div>
+          </li>
+          <li>
+            <div class="item">
+              <img id="item_cover" src="images/audio/image_u61.jpg"/>
+              <div id="item_change">
+                <img id="item_change_img" src="images/audio/up.png"/>
+              </div>
+              <p id="item_rank">1</p>
+              <img id="play_bg" src="images/audio/play_bg_u82.png"/>
+              <a href="audio_display.html">
+                <img id="play_tri" src="images/audio/play_tri_u84.png"/>
+              </a>
+              <p id="item_title">Closer</p>
+              <p id="item_singer">The chainsmokers Featuring Halsey</p>
+            </div>
+          </li>
+          <!-- Footer -->
+          <div id="blank"></div>
+        <div id = "Footer">
+          <a href="about.html"><p id="Footer_txt_1" class="paragraph">Contact us</p></a>
+          <a href="about.html"><p id="Footer_txt_2" class="paragraph">About this website.</p></a>
+          <a href="about.html"><p id="Footer_txt_3" class="paragraph">About us</p></a>
+          <img id="Footer_logo" src="images/header/logo_footer.png"/>
+          <p id="Footer_txt_4" class="paragraph">Super ○ JIJI 2016 in Chengdu</p>
+          <p id="Footer_txt_5" class="paragraph">@Copyright Team ○Quan.&nbsp; All Rights Reserved</p>
+          <img id="slice_1" class="slice" src="images/header/slice.png"/>
+          <img id="slice_2" class="slice" src="images/header/slice.png"/>
+          <img id="slice_3" class="slice" src="images/header/slice.png"/>
+          <img id="slice_4" class="slice" src="images/header/slice.png"/>
+        </div>
         </ul>
-      </div>
+    </div>
+
       
-      <div id = "Audio1" class="audio_display">
-        <p class="Title">Audio_book</p>
-        <a class="More" href="search.html" style="text-decoration:underline;">more</a>
-        <ul id = "display_detail1" class="display">
-          <li>
-            <div class="item">
-              <img id="item_cover" src="images/audio/image_u61.jpg"/>
-              <div id="item_change">
-                <img id="item_change_img" src="images/audio/up.png"/>
-              </div>
-              <p id="item_rank">1</p>
-              <img id="play_bg" src="images/audio/play_bg_u82.png"/>
-              <a href="audio_display.html">
-                <img id="play_tri" src="images/audio/play_tri_u84.png"/>
-              </a>
-              <p id="item_title">Closer</p>
-              <p id="item_singer">The chainsmokers Featuring Halsey</p>
-            </div>
-          </li>
-        </ul>
-      </div>
-
-      <div id = "Audio2" class="audio_display">
-        <p class="Title">Talkshow</p>
-        <a class="More" href="search.html" style="text-decoration:underline;">more</a>
-        <ul id="display_detail2" class="display">
-          <li>
-            <div class="item">
-              <img id="item_cover" src="images/audio/image_u61.jpg"/>
-              <div id="item_change">
-                <img id="item_change_img" src="images/audio/up.png"/>
-              </div>
-              <p id="item_rank">1</p>
-              <img id="play_bg" src="images/audio/play_bg_u82.png"/>
-              <a href="audio_display.html">
-                <img id="play_tri" src="images/audio/play_tri_u84.png"/>
-              </a>
-              <p id="item_title">Closer</p>
-              <p id="item_singer">The chainsmokers Featuring Halsey</p>
-            </div>
-          </li>
-        </ul>
-      </div>
-
-      <div id = "Audio3" class="audio_display">
-        <p class="Title">Entertainment</p>
-        <a class="More" href="search.html" style="text-decoration:underline;">more</a>
-        <ul id="display_detail3" class="display">
-          <li>
-            <div class="item">
-              <img id="item_cover" src="images/audio/image_u61.jpg"/>
-              <div id="item_change">
-                <img id="item_change_img" src="images/audio/up.png"/>
-              </div>
-              <p id="item_rank">1</p>
-              <img id="play_bg" src="images/audio/play_bg_u82.png"/>
-              <a href="audio_display.html">
-                <img id="play_tri" src="images/audio/play_tri_u84.png"/>
-              </a>
-              <p id="item_title">Closer</p>
-              <p id="item_singer">The chainsmokers Featuring Halsey</p>
-            </div>
-          </li>
-        </ul>
-      </div>
-
-      <div id = "Audio4" class="audio_display">
-        <p class="Title">News</p>
-        <a class="More" href="search.html" style="text-decoration:underline;">more</a>
-        <ul id="display_detail4" class="display">
-          <li>
-            <div class="item">
-              <img id="item_cover" src="images/audio/image_u61.jpg"/>
-              <div id="item_change">
-                <img id="item_change_img" src="images/audio/up.png"/>
-              </div>
-              <p id="item_rank">1</p>
-              <img id="play_bg" src="images/audio/play_bg_u82.png"/>
-              <a href="audio_display.html">
-                <img id="play_tri" src="images/audio/play_tri_u84.png"/>
-              </a>
-              <p id="item_title">Closer</p>
-              <p id="item_singer">The chainsmokers Featuring Halsey</p>
-            </div>
-          </li>
-        </ul>
-      </div>
-
-      <div id = "Audio5" class="audio_display">
-        <p class="Title">Others</p>
-        <a class="More" href="search.html" style="text-decoration:underline;">more</a>
-        <ul id="display_detail5" class="display">
-          <li>
-            <div class="item">
-              <img id="item_cover" src="images/audio/image_u61.jpg"/>
-              <div id="item_change">
-                <img id="item_change_img" src="images/audio/up.png"/>
-              </div>
-              <p id="item_rank">1</p>
-              <img id="play_bg" src="images/audio/play_bg_u82.png"/>
-              <a href="audio_display.html">
-                <img id="play_tri" src="images/audio/play_tri_u84.png"/>
-              </a>
-              <p id="item_title">Closer</p>
-              <p id="item_singer">The chainsmokers Featuring Halsey</p>
-            </div>
-          </li>
-        </ul>
-      </div>
-
-      <!-- Footer -->
-      <div id = "Footer">
-        <a href="about.html"><p id="Footer_txt_1" class="paragraph">Contact us</p></a>
-        <a href="about.html"><p id="Footer_txt_2" class="paragraph">About this website.</p></a>
-        <a href="about.html"><p id="Footer_txt_3" class="paragraph">About us</p></a>
-        <img id="Footer_logo" src="images/header/logo_footer.png"/>
-        <p id="Footer_txt_4" class="paragraph">Super ○ JIJI 2016 in Chengdu</p>
-        <p id="Footer_txt_5" class="paragraph">@Copyright Team ○Quan.&nbsp; All Rights Reserved</p>
-        <img id="slice_1" class="slice" src="images/header/slice.png"/>
-        <img id="slice_2" class="slice" src="images/header/slice.png"/>
-        <img id="slice_3" class="slice" src="images/header/slice.png"/>
-        <img id="slice_4" class="slice" src="images/header/slice.png"/>
-      </div>
-    </div>
 </body>
 <script type="text/javascript">
 	$('#photo').slider();
