--- a/fornt end design and code/Super○JiJi/video.html
+++ b/fornt end design and code/Super○JiJi/video.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="js/video.js"></script>
 </head>
 <body>
-	 <div id='header'>
+	<div id='header'>
         <!-- Logo -->
         <div id='logo'>
           <p id="Logo_title1">Super</p>
@@ -45,7 +45,7 @@
         <div id = 'Search'>
           <a href="#"><p id="Search_login" class="paragraph">Login</p></a>
           <div id = 'User'>
-            <a href="personal_page.html" ><p id="User_name" class="paragraph">Username</p></a>
+            <a href="personal_page.html" ><p id="User_name" class="paragraph">{{ username }}</p></a>
             <p id="User_circle1" class="paragraph">○</p>
             <a href="#"><p id="User_logout" class="paragraph">Logout</p></a>
             <p id="User_circle2" class="paragraph">○</p>
@@ -143,8 +143,12 @@
       <div id = "Video0" class="video_display">
         <p class="Title">Animation</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
-
         <ul id = "display_detail0" class="display">
+          <li id="item0">
+            <img src="images/home/photo_1.jpg">
+            <p>Gates</p>
+            <a href="video_display.html"></a>
+          </li>
         </ul>
       </div>
 
@@ -152,6 +156,11 @@
         <p class="Title">Music</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
         <ul id="display_detail1" class="display">
+          <li id="item0">
+            <img src="images/home/photo_1.jpg">
+            <p>Gates</p>
+            <a href="video_display.html"></a>
+          </li>
         </ul>
       </div>
 
@@ -159,6 +168,11 @@
         <p class="Title">Gaming</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
         <ul id="display_detail2" class="display">
+          <li id="item0">
+            <img src="images/home/photo_1.jpg">
+            <p>Gates</p>
+            <a href="video_display.html"></a>
+          </li>
         </ul>
       </div>
 
@@ -166,6 +180,11 @@
         <p class="Title">Tech&amp;Science</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
         <ul id="display_detail3" class="display">
+          <li id="item0">
+            <img src="images/home/photo_1.jpg">
+            <p>Gates</p>
+            <a href="video_display.html"></a>
+          </li>
         </ul>
       </div>
 
@@ -173,6 +192,11 @@
         <p class="Title">Entertainment</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
         <ul id="display_detail4" class="display">
+          <li id="item0">
+            <img src="images/home/photo_1.jpg">
+            <p>Gates</p>
+            <a href="video_display.html"></a>
+          </li>
         </ul>
       </div>
 
@@ -180,6 +204,11 @@
         <p class="Title">Movies&amp;TV</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
         <ul id="display_detail5" class="display">
+          <li id="item0">
+            <img src="images/home/photo_1.jpg">
+            <p>Gates</p>
+            <a href="video_display.html"></a>
+          </li>
         </ul>
       </div>
 
@@ -187,6 +216,11 @@
         <p class="Title">Daily life</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
         <ul id="display_detail6" class="display">
+          <li id="item0">
+            <img src="images/home/photo_1.jpg">
+            <p>Gates</p>
+            <a href="video_display.html"></a>
+          </li>
         </ul>
       </div>
 
@@ -194,14 +228,19 @@
         <p class="Title">Fashion</p>
         <a class="More" href="search.html" style="text-decoration:underline;">more</a>
         <ul id="display_detail7" class="display">
+          <li id="item0">
+            <img src="images/home/photo_1.jpg">
+            <p>Gates</p>
+            <a href="video_display.html"></a>
+          </li>
         </ul>
       </div>
 
       <!-- Footer -->
       <div id = "Footer">
-        <p id="Footer_txt_1" class="paragraph">Contact us</p>
-        <p id="Footer_txt_2" class="paragraph">About this website.</p>
-        <p id="Footer_txt_3" class="paragraph">Join us</p>
+        <a href="about.html"><p id="Footer_txt_1" class="paragraph">Contact us</p></a>
+        <a href="about.html"><p id="Footer_txt_2" class="paragraph">About this website.</p></a>
+        <a href="about.html"><p id="Footer_txt_3" class="paragraph">About us</p></a>
         <img id="Footer_logo" src="images/header/logo_footer.png"/>
         <p id="Footer_txt_4" class="paragraph">Super ○ JIJI 2016 in Chengdu</p>
         <p id="Footer_txt_5" class="paragraph">@Copyright Team ○Quan.&nbsp; All Rights Reserved</p>
